books/projects/rac/tests/yaml_test/data_types/std-tupple-too-big.ref.stderr
std-tupple-too-big.cpp:8: syntax error, unexpected ',', expecting '>'
